--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/yubi
+    url: jdbc:mysql://localhost:3306/bi
     username: root
     password: 123456
   # Redis 配置
@@ -28,6 +28,7 @@ spring:
     host: localhost
     port: 6379
     timeout: 5000
+    password: 123456
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
 #  elasticsearch:
@@ -96,3 +97,9 @@ yuapi:
   client:
     access-key: 替换为你自己的 access-key
     secret-key: 替换为你自己的 secret-key
+
+tencent:
+  deepseek:
+    client:
+      secretId:  ####
+      secretKey:  ####
