--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,17 @@
             <artifactId>redisson</artifactId>
             <version>3.21.3</version>
         </dependency>
+        <!-- 腾讯云 DeepSeek AI -->
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java-common</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java-lkeap</artifactId>
+            <version>LATEST</version>
+        </dependency>
         <dependency>
             <groupId>com.yucongming</groupId>
             <artifactId>yucongming-java-sdk</artifactId>
